--- a/environment.yml
+++ b/environment.yml
@@ -1,7 +1,10 @@
 name: opensense_sandbox
 dependencies:
   - r-base=4.1.3
+  - r-essentials  
   - r-ggplot2
   - r-ncdf4
   - numpy
   - pandas
+  - xarray
+  - netcdf4    
