--- a/environment.yml
+++ b/environment.yml
@@ -1,11 +1,24 @@
 name: opensense_sandbox
 dependencies:
+  # Some basic R packages
   - r-base=4.1.3
   - r-essentials  
   - r-ggplot2
   - r-ncdf4
+  # Some basic Python packages
   - numpy
   - matplotlib    
   - pandas
   - xarray
-  - netcdf4    
+  - netcdf4
+  # Additional dependencies for pycomlink
+  - scipy
+  - numba
+  - h5py
+  - shapely
+  - pyproj
+  - tqdm
+  - pykrige
+  - tensorflow
+  - bottleneck
+  - future
