--- a/environment.yml
+++ b/environment.yml
@@ -1,5 +1,7 @@
 name: opensense_sandbox
 dependencies:
+  - python=3.10.6
+  # Some basic R packages
   - r-base=4.1.3
   - r-essentials  
   - r-ggplot2
@@ -9,9 +11,21 @@ dependencies:
   - r-sf
   - r-s2
   - r-TeachingDemos
+  # Some basic Python packages
   - numpy
   - matplotlib    
   - pandas
   - xarray
   - dask
-  - netcdf4    
+  - netcdf4
+  # Additional dependencies for pycomlink
+  - scipy
+  - numba
+  - h5py
+  - shapely
+  - pyproj
+  - tqdm
+  - pykrige
+  - tensorflow
+  - bottleneck
+  - future
