--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,7 @@
 .ipynb_checkpoints
 .Rproj.user
+.idea/inspectionProfiles/profiles_settings.xml
+.idea/inspectionProfiles/Project_Default.xml
+.idea/modules.xml
+.idea/OPENSENSE_sandbox.iml
+.idea/vcs.xml
