Adding PyNNcml package (#23)
* Adding PyNNcml as a submodule
* Updating environment.yml with PyNNcml requirement
* Bug fixes

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,9 @@
 .ipynb_checkpoints
 .Rproj.user
+.idea/inspectionProfiles/profiles_settings.xml
+.idea/inspectionProfiles/Project_Default.xml
+.idea/modules.xml
+.idea/OPENSENSE_sandbox.iml
+.idea/vcs.xml
+.idea/misc.xml
+.idea/workspace.xml
