--- a/.gitmodules
+++ b/.gitmodules
@@ -7,6 +7,9 @@
 [submodule "PWSQC"]
 	path = PWSQC
 	url = https://github.com/LottedeVos/PWSQC
+[submodule "PyNNcml"]
+	path = PyNNcml
+	url = https://github.com/haihabi/PyNNcml
 [submodule "pws-pyqc"]
 	path = pws-pyqc
 	url = https://github.com/AbbasElHachem/pws-pyqc.git
