--- a/environment.yml
+++ b/environment.yml
@@ -35,3 +35,6 @@ dependencies:
   # Additional dependencies for PyNNcml
   - cpuonly
   - pytorch
+  # Additional dependencies for cml_data_explorer
+  - panel
+  - hvplot
