OpenMRG fix transformer
added updated data processing for transformed data

--- a/.gitignore
+++ b/.gitignore
@@ -33,3 +33,4 @@ notebooks/data/andersson_2022_Ods_resG/radar/radar.nc
 notebooks/data/andersson_2022_Ods_resG/readme.txt
 notebooks/data/andersson_2022_Ods_resG/Torslanda-event-2015-07-28/Torslanda-interactive-time-series.zip
 notebooks/data/andersson_2022_Ods_resG/Torslanda-event-2015-07-28/Torslanda-radar-animation.mp4
+notebooks/data/fencl_2021_Eband_data/Dataset_1.0.0.zip
