OpenMRG correct details in metadata
opensense_data_downloader_and_transformer: added comment indicating how file was created, frequency to MHz and length to meter. Add attributes after transform so that they are not removed by the transform. Removed specification of "missing_value" in all attributes.

create_small_openMRG_example: updated to add information on authors of the stored file and further info on resampling and interpolation of gaps. removed encoding specifications so that xarray defaults to normal behaviour.

openMRG_use_case: updated to run with new nc file. transform frequency to GHz and length to km to make it work with pycomlink.

--- a/.gitignore
+++ b/.gitignore
@@ -34,3 +34,15 @@ notebooks/data/andersson_2022_Ods_resG/readme.txt
 notebooks/data/andersson_2022_Ods_resG/Torslanda-event-2015-07-28/Torslanda-interactive-time-series.zip
 notebooks/data/andersson_2022_Ods_resG/Torslanda-event-2015-07-28/Torslanda-radar-animation.mp4
 notebooks/data/fencl_2021_Eband_data/Dataset_1.0.0.zip
+notebooks/data/data/andersson_2022_OpenMRG/Torslanda-event-2015-07-28/Torslanda-radar-animation.mp4
+notebooks/data/data/andersson_2022_OpenMRG/Torslanda-event-2015-07-28/Torslanda-interactive-time-series.zip
+notebooks/data/data/andersson_2022_OpenMRG/readme.txt
+notebooks/data/data/andersson_2022_OpenMRG/radar/radar.nc
+notebooks/data/data/andersson_2022_OpenMRG/radar/example_read_radar_nc.py
+notebooks/data/data/andersson_2022_OpenMRG/gauges/smhi/GbgA-71420-metadata.csv
+notebooks/data/data/andersson_2022_OpenMRG/gauges/smhi/GbgA-71420-2015JJA.csv
+notebooks/data/data/andersson_2022_OpenMRG/gauges/city/CityGauges-metadata.csv
+notebooks/data/data/andersson_2022_OpenMRG/gauges/city/CityGauges-2015JJA.csv
+notebooks/data/data/andersson_2022_OpenMRG/cml/example_read_cml.nc.py
+notebooks/data/data/andersson_2022_OpenMRG/cml/cml_metadata.csv
+notebooks/data/data/andersson_2022_OpenMRG/cml/cml.nc
